# noteapp

./: .gitignore  CMakeLists.txt  Collection.cpp  Collection.h  CollectionObserver.cpp  CollectionObserver.h  Note.cpp  Note.h  NoteApp.cpp  NoteApp.h  NoteManager.cpp  NoteManager.h  Observer.cpp  Observer.h  main.cpp
tests/: test_collection.cpp  test_manager.cpp  test_note.cpp
